<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_show_pref_location_map">Show Map</string>
    <string name="msg_no_map_app_found">Sorry, Couldn\'t find a Map app!</string>
    <string name="action_share">Share</string>
    <string name="msg_no_share_provider">Sorry, Couldn\'t find a Share Provider!</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">Pune</string>

    <string name="pref_temp_unit_key" translatable="false">temp_unit</string>
    <string name="pref_temp_unit_label">Pick Your Units</string>

    <string name="pref_temp_unit_metric_label">Metric</string>
    <string name="pref_temp_unit_imperial_label">Imperial</string>

    <string name="pref_temp_unit_metric_value" translatable="false">metric</string>
    <string name="pref_temp_unit_imperial_value" translatable="false">imperial</string>

    <string name="speed_metric_units">km/h</string>
    <string name="speed_imperial_units">mph</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Format for displaying Temperature and Unicode U+00B0 ° degree sign [CHAR LIMIT=20] -->
    <string name="format_temperature"><xliff:g id="temperature">%1.0f</xliff:g>\u00B0</string>

    <!-- Format for displaying Humidity [CHAR LIMIT=20] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <!-- Format for displaying Humidity [CHAR LIMIT=20] -->
    <string name="format_wind">Wind: <xliff:g id="speed">%1.0f</xliff:g><xliff:g id="units">%2$s</xliff:g> <xliff:g id="direction">%3$s</xliff:g></string>

    <!-- Format for displaying Humidity [CHAR LIMIT=20] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f hPa</xliff:g></string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.shreekant.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">show_notifications_key</string>
    <string name="pref_enable_notifications_label">Show Notifications</string>
    <string name="pref_enable_notifications_default" translatable="false">false</string>
    <string name="pref_enable_notifications_summary_on">Enabled</string>
    <string name="pref_enable_notifications_summary_off">Disabled</string>

</resources>

