<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_temp_unit_key"
        android:title="@string/pref_temp_unit_label"
        android:dialogTitle="@string/pref_temp_unit_label"
        android:defaultValue="@string/pref_temp_unit_metric_value"
        android:entries="@array/pref_temp_unit_entries"
        android:entryValues="@array/pref_temp_unit_entry_values" />

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOn="@string/pref_enable_notifications_summary_on"
        android:summaryOff="@string/pref_enable_notifications_summary_off" />

</PreferenceScreen>